--- a/client/src/assets/styles/body.scss
+++ b/client/src/assets/styles/body.scss
@@ -49,6 +49,29 @@
     height: 100vh;
 }
 
+//scrolbar -customs 
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
+
 
 ///transition-group-custom
 .submenuTransition-enter {
