--- a/client/src/components/Charts/allCharts.scss
+++ b/client/src/components/Charts/allCharts.scss
@@ -15,6 +15,7 @@
 
 .charts-section {
     display: flex;
+    height:375px;
 }
 
 
@@ -95,5 +96,6 @@
     }
     .charts-section {
         flex-direction: column;
+        height:unset !important
     }
 }
